--- a/.github/workflows/icu.yaml
+++ b/.github/workflows/icu.yaml
@@ -7,7 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 1
       matrix:
         icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1]
     name: icu4c
@@ -22,7 +21,7 @@ jobs:
           BINTRAY_USER: ${{ github.repository_owner }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-          existing_version=$(curl --user "$BINTRAY_USER":"$BINTRAY_KEY" -s https://api.bintray.com/packages/"$BINTRAY_USER"/"$BINTRAY_REPO"/icu4c_"$ICU" | sed -e 's/^.*"latest_version":"\([^"]*\)".*$/\1/' | cut -d '_' -f 1)
+          existing_version=$(curl --user "$BINTRAY_USER":"$BINTRAY_KEY" -s https://api.bintray.com/packages/"$BINTRAY_USER"/"$BINTRAY_REPO"/icu4c | grep -Po $ICU | head -n 1)
           if [ "$ICU" != "$existing_version" ]; then
             sudo curl -o /tmp/icu.tgz -sL http://github.com/unicode-org/icu/releases/download/release-${ICU/./-}/icu4c-${ICU/./_}-src.tgz
             sudo tar -zxf /tmp/icu.tgz -C /tmp
