--- a/.github/workflows/intl.yaml
+++ b/.github/workflows/intl.yaml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
-        icu: [67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2, 56.2, 55.2, 54.2, 53.2, 52.2, 51.3, 50.2]
+        icu: [68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2, 56.2, 55.2, 54.2, 53.2, 52.2, 51.3, 50.2]
     name: php-intl
     steps:
       - name: Checkout
@@ -65,7 +65,9 @@ jobs:
               (
                 cd "/tmp/php-src-$tag/ext/intl" || exit 1
                 phpize && sudo ./configure --with-php-config="$(command -v php-config)" --enable-intl
-                sudo make CXXFLAGS="-O2 -std=c++11 -DU_USING_ICU_NAMESPACE=1 $CXXFLAGS"
+                echo "#define FALSE 0" >> config.h
+                echo "#define TRUE 1" >> config.h
+                sudo make CXXFLAGS="-O2 -std=c++11 -DU_USING_ICU_NAMESPACE=1 -DTRUE=1 -DFALSE=0 $CXXFLAGS"
                 sudo cp ./modules/* "$ext_dir/"
                 enable_extension intl extension
               )
