--- a/.github/workflows/intl.yml
+++ b/.github/workflows/intl.yml
@@ -1,11 +1,6 @@
-name: 'dispatch-single-php-intl'
+name: 'php-intl'
 on:
   workflow_dispatch:
-    inputs:
-      icu:
-        description: ICU version
-        required: true
-
 jobs:
   php-intl:
     container: ubuntu:focal
@@ -14,13 +9,9 @@ jobs:
       fail-fast: false
       matrix:
         php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        icu: [68.2, 68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2, 56.2, 55.2, 54.2, 53.2, 52.2, 51.3, 50.2]
     name: php-intl
     steps:
-      - name: ${{github.event.inputs.php}}
-        id: print_details
-        run: |
-          echo sender=${{github.event.sender.login}}
-          echo ICU=${{github.event.inputs.icu}}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install requirements
@@ -32,7 +23,7 @@ jobs:
       - name: Update intl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ICU: ${{ github.event.inputs.icu }}
+          ICU: ${{ matrix.icu }}
           REPO: ${{ github.repository }}
           VERSION: ${{ matrix.php }}
           WORKSPACE: ${{ github.workspace }}
