--- a/.github/workflows/dispatch-single-icu-all-php-intl.yml
+++ b/.github/workflows/dispatch-single-icu-all-php-intl.yml
@@ -1,10 +1,14 @@
-name: 'php-intl'
+name: 'dispatch-single-icu-all-php-intl'
 on:
   workflow_dispatch:
     inputs:
+      icu:
+        description: ICU version
+        required: true
       rebuild:
         description: rebuild
         required: false
+
 jobs:
   php-intl:
     container: ubuntu:bionic
@@ -13,9 +17,13 @@ jobs:
       fail-fast: false
       matrix:
         php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1']
-        icu: [69.1, 68.2, 68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2, 56.2, 55.2, 54.2, 53.2, 52.2, 51.3, 50.2]
     name: php-intl
     steps:
+      - name: ${{github.event.inputs.php}}
+        id: print_details
+        run: |
+          echo sender=${{github.event.sender.login}}
+          echo ICU=${{github.event.inputs.icu}}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install requirements
@@ -27,7 +35,7 @@ jobs:
       - name: Update intl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ICU: ${{ matrix.icu }}
+          ICU: ${{ github.event.inputs.icu }}
           REPO: ${{ github.repository }}
           VERSION: ${{ matrix.php }}
           WORKSPACE: ${{ github.workspace }}
