--- a/.github/workflows/dispatch-single-php-all-icu-intl.yml
+++ b/.github/workflows/dispatch-single-php-all-icu-intl.yml
@@ -1,44 +1,47 @@
-name: 'dispatch-single-php-intl'
+name: 'dispatch-single-php-all-icu-intl'
 on:
   workflow_dispatch:
     inputs:
-      icu:
-        description: ICU version
+      php:
+        description: PHP version
         required: true
+      rebuild:
+        description: rebuild
+        required: false
 
 jobs:
   php-intl:
-    container: ubuntu:focal
+    container: ubuntu:bionic
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1, 68.1, 68.2, 69.1]
     name: php-intl
     steps:
-      - name: ${{github.event.inputs.php}}
+      - name: ${{github.event.inputs.icu}}
         id: print_details
         run: |
           echo sender=${{github.event.sender.login}}
-          echo ICU=${{github.event.inputs.icu}}
+          echo PHP=${{github.event.inputs.php}}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install requirements
         run: bash src/install-requirements.sh
         env:
-          VERSION: ${{ matrix.php }}
+          VERSION: ${{github.event.inputs.php}}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Update intl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ICU: ${{ github.event.inputs.icu }}
+          ICU: ${{ matrix.icu }}
           REPO: ${{ github.repository }}
-          VERSION: ${{ matrix.php }}
+          VERSION: ${{github.event.inputs.php}}
           WORKSPACE: ${{ github.workspace }}
         run: |
           existing_version=$(gh release view intl 2>/dev/null | grep -Po "$VERSION-$ICU" | head -n 1)
-          if [ "$VERSION-$ICU" != "$existing_version" ]; then
+          if [ "$VERSION-$ICU" != "$existing_version" ] || [ "x${{github.event.inputs.rebuild}}" = "xtrue" ]; then
             bash src/build-intl.sh
             bash src/release-intl.sh
           else
