--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,9 +57,14 @@ jobs:
         with:
           php-version: 8.2
           extensions: intl-${{ matrix.icu }}
+      - name: Setup PHP 8.2
+        uses: shivammathur/setup-php@develop
+        with:
+          php-version: 8.3
+          extensions: intl-${{ matrix.icu }}
       - name: Testing ICU version
         run: |
-          for v in 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2; do
+          for v in 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3; do
             icu_version=$(php$v -i | grep "ICU version =>" | sed -e "s|.*=> s*||")
             echo php$v: $icu_version
             [ "$icu_version" != "${{ matrix.icu }}" ] && 	echo "::warning::failed to setup ${{ matrix.icu }} on php $v"
