Update ubuntu version to 20.04

--- a/.github/workflows/dispatch-single-icu-all-php-intl.yml
+++ b/.github/workflows/dispatch-single-icu-all-php-intl.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   php-intl:
-    container: ubuntu:bionic
+    container: ubuntu:focal
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
