--- a/.github/workflows/intl.yml
+++ b/.github/workflows/intl.yml
@@ -7,7 +7,7 @@ on:
         required: false
 jobs:
   php-intl:
-    container: ubuntu:bionic
+    container: ubuntu:focal
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
