--- a/.github/workflows/dispatch-single-icu-all-php-intl.yml
+++ b/.github/workflows/dispatch-single-icu-all-php-intl.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3']
+        ts: ['zts', 'nts']
     name: php-intl
     steps:
       - name: ${{github.event.inputs.php}}
@@ -29,6 +30,7 @@ jobs:
       - name: Install requirements
         run: bash src/install-requirements.sh
         env:
+          TS: ${{ matrix.ts }}
           VERSION: ${{ matrix.php }}
       - name: Checkout
         uses: actions/checkout@v3
@@ -37,6 +39,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ICU: ${{ github.event.inputs.icu }}
           REPO: ${{ github.repository }}
+          TS: ${{ matrix.ts }}
           VERSION: ${{ matrix.php }}
           WORKSPACE: ${{ github.workspace }}
         run: |
