--- a/.github/workflows/dispatch-single-icu.yml
+++ b/.github/workflows/dispatch-single-icu.yml
@@ -10,8 +10,11 @@ on:
         required: false
 jobs:
   icu:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
     name: icu4c
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, ubuntu-22.04-arm]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
