--- a/.github/workflows/dispatch-single-php-all-icu-intl.yml
+++ b/.github/workflows/dispatch-single-php-all-icu-intl.yml
@@ -11,13 +11,19 @@ on:
 
 jobs:
   php-intl:
-    container: ubuntu:focal
-    runs-on: ubuntu-latest
+    container: ${{ matrix.container }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1, 68.1, 68.2, 69.1, 70.1, 71.1, 72.1, 73.1, 73.2, 74.1, 74.2, 75.1]
         ts: [nts, zts]
+        os: [ubuntu-latest, ubuntu-22.04-arm]
+        include:
+          - os: ubuntu-latest
+            container: ubuntu:focal
+          - os: ubuntu-22.04-arm
+            container: arm64v8/ubuntu:jammy
     name: php-intl
     steps:
       - name: ${{github.event.inputs.icu}}
