--- a/.github/workflows/icu.yml
+++ b/.github/workflows/icu.yml
@@ -5,14 +5,43 @@ on:
       rebuild:
         description: rebuild
         required: false
+      skip_x86_64:
+        description: skip x86_64 builds
+        required: false
+      skip_aarch64:
+        description: skip aarch64 builds
+        required: false
 jobs:
-  icu:
+  icu_x86_64:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
         icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1, 68.1, 68.2, 69.1, 70.1, 71.1, 72.1, 73.1, 73.2, 74.1, 74.2, 75.1, 76.1]
-    name: icu4c
+    if: "!contains(inputs.skip_x86_64, 'true')"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build icu
+        env:
+          ICU: ${{ matrix.icu }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WORKSPACE: ${{ github.workspace }}
+        run: |
+          existing_version=$(gh release view icu4c 2>/dev/null | grep -Po $ICU | head -n 1)
+          if [ "$ICU" != "$existing_version" ] || [ "x${{github.event.inputs.rebuild}}" = "xtrue" ]; then
+            bash src/build-icu4c.sh
+            bash src/release-icu4c.sh
+          else
+            echo "icu4c $ICU build exists"
+          fi
+  icu_aarch64:
+    runs-on: ubuntu-22.04-arm
+    strategy:
+      fail-fast: false
+      matrix:
+        icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1, 68.1, 68.2, 69.1, 70.1, 71.1, 72.1, 73.1, 73.2, 74.1, 74.2, 75.1, 76.1]
+    if: "!contains(inputs.skip_aarch64, 'true')"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
