--- a/.github/workflows/intl.yml
+++ b/.github/workflows/intl.yml
@@ -91,7 +91,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.0', '8.1', '8.2', '8.3', '8.4']
-        icu: [76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
+        icu: [77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
         ts: ['zts', 'nts']
     if: "!contains(inputs.skip_x86_64, 'true')"
     steps:
@@ -127,7 +127,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
-        icu: [76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
+        icu: [77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
         ts: ['zts', 'nts']
     if: "!contains(inputs.skip_x86_64, 'true')"
     steps:
@@ -235,7 +235,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.0', '8.1', '8.2', '8.3', '8.4']
-        icu: [76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
+        icu: [77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
         ts: ['zts', 'nts']
     if: "!contains(inputs.skip_aarch64, 'true')"
     steps:
@@ -271,7 +271,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
-        icu: [76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
+        icu: [77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1]
         ts: ['zts', 'nts']
     if: "!contains(inputs.skip_aarch64, 'true')"
     steps:
