--- a/.github/workflows/dispatch-single-ts-single-php-all-icu-intl.yml
+++ b/.github/workflows/dispatch-single-ts-single-php-all-icu-intl.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1, 68.1, 68.2, 69.1, 70.1, 71.1, 72.1, 73.1, 73.2, 74.1, 74.2, 75.1]
+        icu: [50.2, 51.3, 52.2, 53.2, 54.2, 55.2, 56.2, 57.2, 58.3, 59.2, 60.3, 61.2, 62.2, 63.2, 64.2, 65.1, 66.1, 67.1, 68.1, 68.2, 69.1, 70.1, 71.1, 72.1, 73.1, 73.2, 74.1, 74.2, 75.1, 76.1, 77.1]
         os: [ubuntu-latest, ubuntu-22.04-arm]
         include:
           - os: ubuntu-latest
@@ -52,7 +52,7 @@ jobs:
           VERSION: ${{github.event.inputs.php}}
           WORKSPACE: ${{ github.workspace }}
         run: |
-          existing_version=$(gh release view intl 2>/dev/null | grep -Po "$VERSION-$ICU" | head -n 1)
+          existing_version=$(gh release view intl-$ICU 2>/dev/null | grep -Po "$VERSION-$ICU" | head -n 1)
           if [ "$VERSION-$ICU" != "$existing_version" ] || [ "x${{github.event.inputs.rebuild}}" = "xtrue" ]; then
             bash src/build-intl.sh
             bash src/release-intl.sh
