--- a/.github/workflows/dispatch-single-icu-single-php-intl.yml
+++ b/.github/workflows/dispatch-single-icu-single-php-intl.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   php-intl:
+    if: ${{ !(github.event.inputs.php == '8.5' && fromJSON(format('[{0}]', github.event.inputs.icu))[0] < 57) }}
     container: ${{ matrix.container }}
     runs-on: ${{ matrix.os }}
     strategy:
