--- a/.github/workflows/dispatch-single-icu-all-php-intl.yml
+++ b/.github/workflows/dispatch-single-icu-all-php-intl.yml
@@ -13,6 +13,8 @@ jobs:
   php-intl:
     container: ${{ matrix.container }}
     runs-on: ${{ matrix.os }}
+    env:
+      SKIP_PHP85: ${{ matrix.php == '8.5' && fromJSON(format('[{0}]', github.event.inputs.icu))[0] < 57 }}
     strategy:
       fail-fast: false
       matrix:
@@ -26,20 +28,27 @@ jobs:
             container: arm64v8/ubuntu:jammy
     name: php-intl
     steps:
+      - name: Skip unsupported PHP 8.5 build
+        if: ${{ env.SKIP_PHP85 == 'true' }}
+        run: echo "Skipping PHP 8.5 for ICU ${{ github.event.inputs.icu }}"
       - name: ${{github.event.inputs.php}}
         id: print_details
+        if: ${{ env.SKIP_PHP85 != 'true' }}
         run: |
           echo sender=${{github.event.sender.login}}
           echo ICU=${{github.event.inputs.icu}}
       - name: Checkout
         uses: actions/checkout@v4
+        if: ${{ env.SKIP_PHP85 != 'true' }}
       - name: Install requirements
         run: bash src/install-requirements.sh
+        if: ${{ env.SKIP_PHP85 != 'true' }}
         env:
           TS: ${{ matrix.ts }}
           VERSION: ${{ matrix.php }}
       - name: Checkout
         uses: actions/checkout@v4
+        if: ${{ env.SKIP_PHP85 != 'true' }}
       - name: Update intl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -48,6 +57,7 @@ jobs:
           TS: ${{ matrix.ts }}
           VERSION: ${{ matrix.php }}
           WORKSPACE: ${{ github.workspace }}
+        if: ${{ env.SKIP_PHP85 != 'true' }}
         run: |
           existing_version=$(gh release view intl-$ICU 2>/dev/null | grep -Po "$VERSION-$ICU" | head -n 1)
           if [ "$VERSION-$ICU" != "$existing_version" ] || [ "x${{github.event.inputs.rebuild}}" = "xtrue" ]; then
