--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, ubuntu-22.04]
-        icu: [78.1, 77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2, 56.2, 55.2, 54.2, 53.2, 52.2, 51.3, 50.2]
+        icu: [78.1, 77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2]
         ts: ['ts', 'nts']
     if: "!contains(inputs.skip_x86_64, 'true')"
     steps:
@@ -98,12 +98,25 @@ jobs:
           extensions: intl-${{ matrix.icu }}
         env:
           phpts: ${{ matrix.ts }}
+      - name: Setup PHP 8.5
+        uses: shivammathur/setup-php@develop
+        with:
+          php-version: 8.5
+          extensions: intl-${{ matrix.icu }}
+        env:
+          phpts: ${{ matrix.ts }}
       - name: Testing ICU version
         run: |
-          for v in 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3 8.4; do
+          icu="${{ matrix.icu }}"
+          icu_major=${icu%%.*}
+          for v in 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3 8.4 8.5; do
+            if [ "$v" = "8.5" ] && [ "$icu_major" -lt 57 ]; then
+              echo "Skipping php$v for ICU $icu"
+              continue
+            fi
             icu_version=$(php$v -i | grep "ICU version =>" | sed -e "s|.*=> s*||")
             echo php$v: $icu_version
-            [ "$icu_version" != "${{ matrix.icu }}" ] && 	echo "::warning::failed to setup ${{ matrix.icu }} on php $v"
+            [ "$icu_version" != "${{ matrix.icu }}" ] && echo "::warning::failed to setup ${{ matrix.icu }} on php $v"
             php$v -v
           done
   intl_aarch64:
@@ -112,7 +125,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04-arm, ubuntu-24.04-arm]
-        icu: [78.1, 77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2, 56.2, 55.2, 54.2, 53.2, 52.2, 51.3, 50.2]
+        icu: [78.1, 77.1, 76.1, 75.1, 74.2, 74.1, 73.2, 73.1, 72.1, 71.1, 70.1, 69.1, 68.2, 68.1, 67.1, 66.1, 65.1, 64.2, 63.2, 62.2, 61.2, 60.3, 59.2, 58.3, 57.2]
         ts: ['ts', 'nts']
     if: "!contains(inputs.skip_aarch64, 'true')"
     steps:
@@ -195,9 +208,22 @@ jobs:
           extensions: intl-${{ matrix.icu }}
         env:
           phpts: ${{ matrix.ts }}
+      - name: Setup PHP 8.5
+        uses: shivammathur/setup-php@develop
+        with:
+          php-version: 8.5
+          extensions: intl-${{ matrix.icu }}
+        env:
+          phpts: ${{ matrix.ts }}
       - name: Testing ICU version
         run: |
-          for v in 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3 8.4; do
+          icu="${{ matrix.icu }}"
+          icu_major=${icu%%.*}
+          for v in 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3 8.4 8.5; do
+            if [ "$v" = "8.5" ] && [ "$icu_major" -lt 57 ]; then
+              echo "Skipping php$v for ICU $icu"
+              continue
+            fi
             icu_version=$(php$v -i | grep "ICU version =>" | sed -e "s|.*=> s*||")
             echo php$v: $icu_version
             [ "$icu_version" != "${{ matrix.icu }}" ] && echo "::warning::failed to setup ${{ matrix.icu }} on php $v" && exit 1
